@@ -1,4 +1,4 @@
-## Copyright (C) 2014-2017 Free Software Foundation, Inc.
+## Copyright (C) 2014-2018 Free Software Foundation, Inc.
 ## Written by Simon Sobisch, Brian Tiffin
 ##
 ## This file is part of GnuCOBOL.
@@ -504,7 +504,10 @@ AT_CLEANUP
 AT_SETUP([cobcrun error messages])
 AT_KEYWORDS([runmisc])
 
-AT_CHECK([$COBCRUN], [1], [ignore], [])
+AT_CHECK([$COBCRUN -q], [1], [],
+[cobcrun: missing PROGRAM name
+Try 'cobcrun --help' for more information.
+])
 AT_CHECK([$COBCRUN -q -prog], [1], [],
 [cobcrun: unrecognized option '-prog'
 ])
