@@ -1,4 +1,16 @@
 
+2018-01-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobcrun.c (main): raise explicit error if called without any PROGRAM
+	  name given
+	* cobcrun.c (cobcrun_initial_module): removed code parts for extending
+	  environment options where not needed
+
+2017-12-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobcrun.c (main): use of cob_resolve_cobol instead of cob_resolve
+	  as we want its error handling in any case
+
 2017-12-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobcrun.c [_WIN32]: added missing headers
